Home task_2. Components

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,5 @@
-<p>footer works!</p>
+<nav class="navbar fixed-bottom navbar-dark bg-dark justify-content-end">
+    <span class="navbar-text">
+        Copyright. All right reserve
+    </span>
+</nav>
