--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<nav class="navbar navbar-dark bg-dark">
+    <a class="navbar-brand ml-4" href="#"><fa-icon [icon]="faPlayCircle"></fa-icon> VIDEO COURSE</a>
+    <form class="form-inline">
+        <button class="btn btn-dark" type="button"><fa-icon [icon]="faUser"></fa-icon> User login</button>
+        <button class="btn btn-dark" type="button"><fa-icon [icon]="faSignOutAlt"></fa-icon> Log off</button>
+    </form>
+</nav>
