--- a/src/app/course-item/course-item.component.html
+++ b/src/app/course-item/course-item.component.html
@@ -1,18 +1,18 @@
 <div class="card border-light">
     <div class="card-header bg-white">
         <div class="d-flex w-75 justify-content-between align-items-center">
-            <h5 class="my-0">{{course.title}}</h5>
+            <h5 class="my-0">{{course?.title}}</h5>
             <p class="my-0 text-muted">
-                <span><fa-icon [icon]="faClock"></fa-icon> {{course.duration}} min</span>
-                <span class="ml-2"><fa-icon [icon]="faCalendarAlt"></fa-icon> {{course.creationDate}}</span>
+                <span><i class="fa fa-clock"></i> {{course?.duration}} min</span>
+                <span class="ml-2"><i class="fa fa-calendar-alt"></i> {{course?.creationDate}}</span>
             </p>
         </div>
     </div>
     <div class="card-body d-flex justify-content-between align-items-center">
-        <p class="card-text w-75">{{course.description}}</p>
+        <p class="card-text w-75">{{course?.description}}</p>
         <div class="btn-group" role="group" style="height: fit-content">
-            <button type="button" class="btn btn-primary"><fa-icon [icon]="faPen"></fa-icon> Edit</button>
-            <button type="button" class="btn btn-primary ml-2" (click)="delete(course.id)"><fa-icon [icon]="faTrash"></fa-icon> Delete</button>
+            <button type="button" class="btn btn-primary"><i class="fa fa-pen"></i> Edit</button>
+            <button type="button" class="btn btn-primary ml-2" (click)="delete(course.id)"><i class="fa fa-trash"></i> Delete</button>
         </div>
     </div>
 </div>
