--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,8 @@
 <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand ml-4" href="#"><i class="fa fa-play-circle"></i> VIDEO COURSE</a>
     <form class="form-inline">
-        <button class="btn btn-dark" type="button"><i class="fa fa-user"></i> User login</button>
-        <button class="btn btn-dark" type="button"><i class="fa fa-sign-out-alt"></i> Log off</button>
+        <button class="btn btn-dark" type="button" *ngIf="!isAuth" (click)="handleLogin()"><i class="fa fa-user" ></i> Login</button>
+        <span class="text-white" *ngIf="isAuth">{{userLogin}}</span>
+        <button *ngIf="isAuth" class="btn btn-dark" type="button" (click)="handleLogoff()"><i class="fa fa-sign-out-alt"></i> Log off</button>
     </form>
 </nav>
