--- a/src/app/add-button/add-button.component.html
+++ b/src/app/add-button/add-button.component.html
@@ -1,2 +1,2 @@
-<button class="btn btn-primary"><i class="fa fa-plus"></i> Add course</button>
+<button class="btn btn-primary" (click)="onClick()"><i class="fa fa-plus"></i> Add course</button>
 
