--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -3,7 +3,7 @@
         <app-search></app-search>
     </div>
     <div class="row mx-0 my-2 justify-content-end">
-        <app-add-button></app-add-button>
+        <app-add-button (click)="onCreateCourse()"></app-add-button>
     </div>
     <div class="row mx-0 my-2 bg-white" *ngIf="courses.length > 0" >
         <app-course-item *ngFor="let course of courses" [course]="course" (onDelete)="onDelete($event)"></app-course-item>
