--- a/src/app/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/breadcrumbs/breadcrumbs.component.html
@@ -1,3 +1,3 @@
 <div class="px-5">
-    <h5 class="my-2">Courses</h5>
+    <h5 class="my-2"><a routerLink='/courses'>Courses</a>/{{title}}</h5>
 </div>
