--- a/src/app/course-item/course-item.component.html
+++ b/src/app/course-item/course-item.component.html
@@ -11,7 +11,7 @@
     <div class="card-body d-flex justify-content-between align-items-center">
         <p class="card-text w-75">{{course?.description}}</p>
         <div class="btn-group" role="group" style="height: fit-content">
-            <button type="button" class="btn btn-primary"><i class="fa fa-pen"></i> Edit</button>
+            <button type="button" class="btn btn-primary" (click)="handleEditBtn()"><i class="fa fa-pen"></i> Edit</button>
             <button type="button" class="btn btn-primary ml-2" (click)="delete(course.id)"><i class="fa fa-trash"></i> Delete</button>
         </div>
     </div>
