--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,9 +1,10 @@
+<app-breadcrumbs></app-breadcrumbs>
 <div class="container-fluid px-5 bg-light" style="height: 800px;">
     <div class="row mx-0 my-2">
         <app-search></app-search>
     </div>
     <div class="row mx-0 my-2 justify-content-end">
-        <app-add-button (click)="onCreateCourse()"></app-add-button>
+        <app-add-button></app-add-button>
     </div>
     <div class="row mx-0 my-2 bg-white" *ngIf="courses.length > 0" >
         <app-course-item *ngFor="let course of courses" [course]="course" (onDelete)="onDelete($event)" class="w-100"></app-course-item>
