--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<app-header (onLogin)="onLoginProccess()"></app-header>
-<router-outlet></router-outlet>
-<app-footer></app-footer>
+<div>
+   <app-header (onLogin)="onLoginProccess()"></app-header>
+    <router-outlet></router-outlet>
+    <app-footer></app-footer> 
+</div>
