--- a/src/app/load-more-button/load-more-button.component.html
+++ b/src/app/load-more-button/load-more-button.component.html
@@ -1,5 +1,5 @@
 <div class="card border-light">
     <div class="card-body px-0 py-0">
-        <button class="btn btn-light">Load more</button>
+        <button class="btn btn-light" (click)="onClick()">Load more</button>
     </div>
 </div>
