--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
 <div class="form-inline my-2">
-    <input class="form-control mr-sm-2" type="text" [(ngModel)]="search" (keyup.enter)="submitSearch()" placeholder="Text to search" aria-label="Search">
+    <input class="form-control mr-sm-2" type="text" [(ngModel)]="searchField" (keyup.enter)="submitSearch()" placeholder="Text to search" aria-label="Search">
     <button class="btn btn-outline-success my-2 my-sm-0" (click)="submitSearch()">Search</button>
 </div>
