--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
    <app-header (onLogin)="onLoginProccess()"></app-header>
     <router-outlet></router-outlet>
-    <app-footer></app-footer> 
+    <!-- <app-footer></app-footer>  -->
 </div>
 <app-loading></app-loading>
