--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -6,10 +6,10 @@
     <div class="row mx-0 my-2 justify-content-end">
         <app-add-button></app-add-button>
     </div>
-    <div class="row mx-0 my-2 bg-white" *ngIf="courses.length > 0" >
-        <app-course-item *ngFor="let course of courses" [course]="course" (onDelete)="handleDeleteCourseBtn($event)" class="w-100"></app-course-item>
+    <div class="row mx-0 my-2 bg-white" *ngIf="(courses$ | async).length > 0" >
+        <app-course-item *ngFor="let course of courses$ | async" [course]="course" (onDelete)="handleDeleteCourseBtn($event)" class="w-100"></app-course-item>
     </div>
-    <div class="row mx-0 my-2 bg-white" *ngIf="courses.length === 0" >
+    <div class="row mx-0 my-2 bg-white" *ngIf="(courses$ | async).length === 0" >
         <div class="alert alert-warning w-100 text-center" role="alert">
             No data. Feel free to add new course!
         </div>
